update: anime-dive

--- a/pkgbuilds/anime-dive/PKGBUILD
+++ b/pkgbuilds/anime-dive/PKGBUILD
@@ -28,10 +28,15 @@ build() {
   mv src/* ./
   rmdir src
 
+  # Install npm dependencies here in build directory
+  npm install --production
+
+  # Install puppeteer browser
+  npx puppeteer browsers install chrome
+
   # Create the C wrapper
   cat >anime-dive.c <<'EOF'
 #include <unistd.h>
-
 int main() {
     char *args[] = {"node", "/opt/anime-dive/main.js", NULL};
     execvp("node", args);
@@ -46,15 +51,9 @@ EOF
 package() {
   cd "$srcdir/${_pkgname}"
 
-  # Install application files
+  # Install application files (including node_modules from build)
   mkdir -p "$pkgdir/opt/${_pkgname}"
   cp -r ./* "$pkgdir/opt/${_pkgname}/"
-
-  # Install npm dependencies
-  npm install --production
-
-  # Install puppeteer browser
-  npx puppeteer browsers install chrome
 
   # Install the binary wrapper
   install -Dm755 anime-dive "$pkgdir/usr/bin/anime-dive"
