--- a/pkgbuilds/anime-dive/PKGBUILD
+++ b/pkgbuilds/anime-dive/PKGBUILD
@@ -8,7 +8,7 @@ pkgdesc="An anime / scans searcher, selector and downloader program for French a
 arch=('x86_64')
 url="https://github.com/BnSplits/${_pkgname}"
 license=('GPL')
-depends=('nodejs' 'npm')
+depends=('nodejs' 'npm' 'chromium')
 makedepends=('git' 'gcc')
 provides=("${_pkgname}")
 conflicts=("${_pkgname}")
@@ -51,9 +51,6 @@ package() {
   # Install application files (including node_modules from build)
   mkdir -p "$pkgdir/opt/${_pkgname}"
   cp -r ./* "$pkgdir/opt/${_pkgname}/"
-
-  # Install puppeteer browser
-  npx puppeteer browsers install chrome
 
   # Install the binary wrapper
   install -Dm755 anime-dive "$pkgdir/usr/bin/anime-dive"
