add: n-m3u8dl-re-bin-bn

--- a/pkgbuilds/anime-dive/PKGBUILD
+++ b/pkgbuilds/anime-dive/PKGBUILD
@@ -8,7 +8,7 @@ pkgdesc="An anime / scans searcher, selector and downloader program for French a
 arch=('x86_64')
 url="https://github.com/BnSplits/${_pkgname}"
 license=('GPL')
-depends=('nodejs' 'chromium')
+depends=('nodejs' 'chromium' 'aria2' 'youtube-dl-nightly' 'n-m3u8dl-re-bin-bn')
 makedepends=('git' 'gcc' 'npm')
 provides=("${_pkgname}")
 conflicts=("${_pkgname}")
