update: hypr-move-to-workspace

--- a/pkgbuilds/hypr-move-to-workspace/PKGBUILD
+++ b/pkgbuilds/hypr-move-to-workspace/PKGBUILD
@@ -26,5 +26,5 @@ build() {
 package() {
   cd "$srcdir/${_pkgname}"
   install -Dm755 "target/release/${_pkgname}" "$pkgdir/usr/bin/${_pkgname}"
-  ln -s "${_pkgname}" "$pkgdir/usr/bin/hgtw"
+  ln -s "${_pkgname}" "$pkgdir/usr/bin/hmtw"
 }
