--- a/pkgbuilds/hypr-go-to-workspace/PKGBUILD
+++ b/pkgbuilds/hypr-go-to-workspace/PKGBUILD
@@ -3,7 +3,7 @@ pkgname=hypr-go-to-workspace-git
 _pkgname=${pkgname%-git}
 pkgver=r5.82ff9f5
 pkgrel=1
-pkgdesc="a Rust CLI tool that generates 16-step color gradients from a hex base using HLS"
+pkgdesc="A Hyprland workspace switcher with smart navigation and window focusing capabilities"
 arch=('x86_64')
 url="https://github.com/BnSplits/${_pkgname}"
 license=('GPL')
