--- a/pkgbuilds/hypr-move-to-workspace/PKGBUILD
+++ b/pkgbuilds/hypr-move-to-workspace/PKGBUILD
@@ -1,9 +1,9 @@
 # Maintainer: BnSplits <bnsp.x0@gmail.com>
 pkgname=hypr-move-to-workspace-git
 _pkgname=${pkgname%-git}
-pkgver=r7.4807233
+pkgver=r8.7f4fecd
 pkgrel=1
-pkgdesc="a Rust CLI tool that generates 16-step color gradients from a hex base using HLS"
+pkgdesc="A Hyprland utility to move windows between workspaces with optional silent mode"
 arch=('x86_64')
 url="https://github.com/BnSplits/${_pkgname}"
 license=('GPL')
